<resources>
    <string name="app_name">Scheduler_Practice</string>
    <string name="_09_00">09:00</string>
    <string name="_15_00">15:00</string>
    <string name="_20_30">20:30</string>
    <string name="_02_00">02:00</string>
    <string name="_09_30">09:30</string>
    <string name="_10_00">10:00</string>
    <string name="_10_30">10:30</string>
    <string name="_11_00">11:00</string>
    <string name="_11_30">11:30</string>
    <string name="_12_00">12:00</string>
    <string name="_12_30">12:30</string>
    <string name="_13_00">13:00</string>
    <string name="_13_30">13:30</string>
    <string name="_14_00">14:00</string>
    <string name="_14_30">14:30</string>
    <string name="_15_30">15:30</string>
    <string name="_16_00">16:00</string>
    <string name="_16_30">16:30</string>
    <string name="_17_00">17:00</string>
    <string name="_17_30">17:30</string>
    <string name="_18_00">18:00</string>
    <string name="_08_30">08:30</string>
    <string name="_08_00">08:00</string>
    <string name="_07_30">07:30</string>
    <string name="_07_00">07:00</string>
    <string name="_06_30">06:30</string>
    <string name="_06_00">06:00</string>
    <string name="_05_30">05:30</string>
    <string name="_05_00">05:00</string>
    <string name="_04_30">04:30</string>
    <string name="_04_00">04:00</string>
    <string name="_03_30">03:30</string>
    <string name="_03_00">03:00</string>
    <string name="_02_30">02:30</string>
    <string name="_01_30">01:30</string>
    <string name="_01_00">01:00</string>
    <string name="_00_30">00:30</string>
    <string name="_00_00">00:00</string>
    <string name="_23_30">23:30</string>
    <string name="_23_00">23:00</string>
    <string name="_22_30">22:30</string>
    <string name="_22_00">22:00</string>
    <string name="_21_30">21:30</string>
    <string name="_21_00">21:00</string>
    <string name="_20_00">20:00</string>
    <string name="_19_30">19:30</string>
    <string name="_19_00">19:00</string>
    <string name="_18_30">18:30</string>
</resources>